@@ -10,17 +10,17 @@ public class InspectTest {
 
     public static void main(String[] args)
             throws ClassNotFoundException, NoSuchMethodException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
-        Class aClass =Class.forName("reflection.Person");
-        Method nameMethod=aClass.getDeclaredMethod("getName");
-        Object newObject = aClass.newInstance();
-        String output =(String) nameMethod.invoke(newObject);
+        Class<?> aClass = Class.forName("reflection.Person");
+        Method nameMethod = aClass.getDeclaredMethod("getName");
+        Object newObject = aClass.getDeclaredConstructor().newInstance();
+        String output = (String) nameMethod.invoke(newObject);
         System.out.println(output);
 
-        Person p1 = (Person)newObject;
+        Person p1 = (Person) newObject;
         System.out.println(p1.getName());
 
 
-        for (Method method:aClass.getDeclaredMethods())
+        for (Method method : aClass.getDeclaredMethods())
             System.out.println(method.getName());
 
     }
